--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "deepgram.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,6 +13,8 @@
   "dependencies": {
     "express": "^4.19.2",
     "node-record-lpcm16": "^1.0.1",
-    "openai": "^4.52.2"
+    "openai": "^4.52.2",
+    "socket.io": "^4.7.5",
+    "twilio": "^5.2.2"
   }
 }
