--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "private": true,
   "scripts": {
-    "dev": "tsx watch --clear-screen=false src/index.ts | pino-pretty",
+    "dev": "tsx watch --clear-screen=false src/server.ts | pino-pretty",
     "build": "rimraf dist && tsup",
     "start": "node dist/index.js",
     "clean": "rimraf dist coverage",
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^7.0.0",
+    "@types/ws": "^8.5.10",
+    "axios": "^1.7.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "envalid": "^8.0.0",
@@ -27,15 +29,16 @@
     "express-rate-limit": "^7.2.0",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
-    "pino-http": "^10.0.0",
-    "swagger-ui-express": "^5.0.0",
-    "zod": "^3.22.4",
-    "axios": "^1.7.2",
+    "node-cache": "^5.1.2",
     "node-record-lpcm16": "^1.0.1",
     "openai": "^4.52.2",
+    "pino-http": "^10.0.0",
     "socket.io": "^4.7.5",
+    "swagger-ui-express": "^5.0.0",
     "twilio": "^5.2.2",
-    "wavefile": "^11.0.0"
+    "wavefile": "^11.0.0",
+    "ws": "^8.18.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.2.1",
