--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
   },
   "extends": [],
   "exclude": ["node_modules"],
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", "src/synthesizer/deepgram.ts"]
 }
