feat: openai assistant added with function calling

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.ts",
   "private": true,
   "scripts": {
+    "assistant": "node assistant.js",
     "dev": "tsx watch --clear-screen=false src/server.ts | pino-pretty",
     "build": "rimraf dist && tsup",
     "start": "node dist/index.js",
@@ -20,6 +21,9 @@
   },
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^7.0.0",
+    "@langchain/community": "^0.2.17",
+    "@langchain/langgraph": "^0.0.26",
+    "@langchain/openai": "^0.2.1",
     "@types/ws": "^8.5.10",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
