--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
     "express-status-monitor": "^1.3.4",
+    "groq-sdk": "^0.5.0",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
     "node-cache": "^5.1.2",
